--- a/agent/config.yaml
+++ b/agent/config.yaml
@@ -1,4 +1,4 @@
 vm_id: "vm-001"
-collector_url: "http://localhost:3000/api/v1/events"
-poll_interval: 2
+collector_url: "http://192.168.56.102:3000/api/v1/events"
+poll_interval: 10
 event_id: 4625
