--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,47 @@
+# Python
 __pycache__/
 *.pyc
 *.pyo
 *.egg-info/
+dist/
+build/
+*.egg
+
+# Virtual environments
+venv/
+.venv/
+env/
+
+# Environment / secrets
 .env
+.env.*
+
+# Agent runtime files
 *_seen.json
+
+# IDE / Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+
+# OS files
+Thumbs.db
+Desktop.ini
+.DS_Store
+
+# Linter / formatter caches
 .ruff_cache/
+.mypy_cache/
+.pytest_cache/
+
+# Node (for future React dashboard)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.next/
