--- a/agent/config.yaml
+++ b/agent/config.yaml
@@ -2,3 +2,9 @@ vm_id: "vm-001"
 collector_url: "http://192.168.56.102:3000/api/v1/events"
 poll_interval: 10
 event_id: 4625
+
+# Log rotation settings (all optional — defaults shown below)
+# logging:
+#   file: "agent.log"           # Log file path (relative to agent dir)
+#   max_bytes: 5242880          # 5 MB per file before rotation
+#   backup_count: 3             # Keep 3 rotated files (agent.log.1, .2, .3)
